--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 	"require": {
 		"php": ">=5.2.8",
 		"ext-mcrypt": "*",
-    "cakephp/debug_kit": "2.2.*"
+        "cakephp/debug_kit": "2.2.*",
+        "slywalker/boost_cake": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*",
